--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Psycologists</a></li>
                 <li><a href="#resources">Resources</a></li>
-                <li><a href="./chat/src/app.js">Chat</a></li>
+                <li><a href="chat/src/app.js">Chat</a></li>
                 <li><a href="main.html">My Zen Garden</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
